# valuator

./: LICENSE.txt  README.md  package.json  tailwind.config.js
docs/: architecture.md  main.md
src-tauri/: Cargo.toml  Makefile  tauri.conf.json
src-tauri/benches/: parser_bench.rs
src-tauri/src/: TODO.md  board.rs  cell.rs  constants.rs  err.rs  eval.rs  handle.rs  lib.rs  main.rs  parser.rs  rpc.rs  tag.rs  tile.rs
src/app/: board.tsx  greet.tsx  page.tsx  rpc.tsx  tile.tsx
