[package]
name = "valuator"
version = "0.1.0"
description = "A Financial Modelling App"
authors = ["dwoodlins@gmail.com"]
license = ""
repository = ""
default-run = "valuator"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
tauri = { version = "1.5.0", features = [] }
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
scopeguard = "1.2.0"
rustc-hash = "1.1"
const-str = "0.5.6"
petgraph = { version = "0.6.4", features = ["serde-1"] }
log = "0.4.20"
log-derive = "0.4.1"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
itertools = "0.12.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
